# HaipX

./: BUILD_TRIGGER.md  BUILD_WINDOWS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.windows  Dockerfile.windows.simple  README.md  build-linux.sh  build-windows-simple.sh  build-windows.sh  pack.mcmeta  quick-build-windows.sh  run.sh  test_audio.lua  toolchain-mingw.cmake  vcpkg.json  windows-toolchain.cmake
.github/workflows/: appimage.yml  build-linux.yml  build-windows.yml  build.yml  cmake.yml  debug-build.yml  macos.yml  manual-build.yml  quick-build.yml  release.yml  simple-build.yml  simple-windows-build.yml  single-file-build.yml  test-build.yml  ultra-simple-build.yml  windows-clang.yml  windows-native.yml  windows.yml  working-build.yml
HaipX/: README.md
assets/minecraft/models/item/: black_bundle.json  black_bundle_open_back.json  black_bundle_open_front.json  blue_bundle.json  blue_bundle_open_back.json  blue_bundle_open_front.json  brown_bundle.json  brown_bundle_open_back.json  brown_bundle_open_front.json  bundle.json  bundle_open_back.json  bundle_open_front.json  cyan_bundle.json  cyan_bundle_open_back.json  cyan_bundle_open_front.json  disc_fragment_5.json  gray_bundle.json  gray_bundle_open_back.json  gray_bundle_open_front.json  green_bundle.json  green_bundle_open_back.json  green_bundle_open_front.json  light_blue_bundle.json  light_blue_bundle_open_back.json  light_blue_bundle_open_front.json  light_gray_bundle.json  light_gray_bundle_open_back.json  light_gray_bundle_open_front.json  lime_bundle.json  lime_bundle_open_back.json  lime_bundle_open_front.json  magenta_bundle.json  magenta_bundle_open_back.json  magenta_bundle_open_front.json  music_disc_11.json  music_disc_13.json  music_disc_5.json  music_disc_blocks.json  music_disc_cat.json  music_disc_chirp.json  (+33 more)
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  settings.toml
build-linux/res/: preload.json
build-linux/res/content/base/: preload.json
build-linux/res/content/base/items/: apple.json  iron_boots.json  iron_chestplate.json  leather_chestplate.json  music_disc_cat.json
build-linux/res/models/: flowerbed_3.json
build-linux/res/scripts/: survival_hud.lua
build-linux/src/: Makefile  cmake_install.cmake
build-linux/vctest/: Makefile  cmake_install.cmake  vctest
build-linux/worlds/New World/: indices.json  player.json  resources.json  rules.toml  world.json
build-linux/worlds/New World/client/: environment.json
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-windows-minimal/: CMakeCache.txt
build-windows-simple/: CMakeCache.txt
dev/: AppImageBuilder.yml  HaipX.desktop  valgrind.suppress
dev/cmake/: BuildAppdir.cmake
doc/en/scripting/builtins/: libnetwork.md
doc/ru/scripting/builtins/: libnetwork.md
doc/specs/: binary_json_spec.md
music_pack/: pack.mcmeta
music_pack/assets/minecraft/: sounds.json
music_pack/assets/minecraft/lang/: ru_ru.json
res/: preload.json
res-linux/content/base/: content.json
res-linux/content/base/items/: carrot.json  golden_apple.json  iron_leggings.json  iron_shovel.json  leather_leggings.json  music_disc_13.json  music_disc_cat.json  music_disc_far.json  music_disc_stal.json  music_disc_wait.json  stone_sword.json  wooden_axe.json  wooden_sword.json
res-linux/content/base/scripts/items/: iron_pickaxe.lua  iron_shovel.lua  iron_sword.lua  leather_boots.lua  leather_helmet.lua  music_disc_far.lua  music_disc_otherside.lua  music_disc_stal.lua  stone_axe.lua  wooden_axe.lua
res-linux/scripts/: minecraft_hud.lua  stdcmd.lua
res-windows/content/base/blocks/: stone.json
res-windows/content/base/items/: iron_axe.json  iron_helmet.json  iron_sword.json  leather_boots.json  leather_helmet.json  music_disc_5.json  music_disc_mellohi.json  music_disc_otherside.json  music_disc_pigstep.json  music_disc_relic.json  wooden_shovel.json
res-windows/content/base/scripts/items/: apple.lua  music_disc_11.lua  music_disc_5.lua  music_disc_blocks.lua  music_disc_mellohi.lua  wooden_sword.lua
res-windows/scripts/: block_durability.lua  hud.lua  stdcmd.lua
res/content/base/: content.json
res/content/base/generators/: beta.toml
res/content/base/items/: iron_pickaxe.json  music_disc_11.json  music_disc_blocks.json  music_disc_chirp.json  music_disc_strad.json  music_disc_ward.json  stone_axe.json  stone_pickaxe.json  stone_shovel.json  wooden_pickaxe.json
res/content/base/scripts/items/: golden_apple.lua  iron_axe.lua  iron_boots.lua  iron_leggings.lua  music_disc_13.lua  music_disc_cat.lua  music_disc_chirp.lua  music_disc_pigstep.lua  music_disc_relic.lua  music_disc_strad.lua  music_disc_ward.lua  stone_shovel.lua  stone_sword.lua  wooden_pickaxe.lua  wooden_shovel.lua
res/layouts/: minecraft_hud.xml  survival_hud.xml
res/models/: flowerbed_1.json
res/scripts/: music_disc_base.lua
src/: CMakeLists.txt
src/content/: ContentLoader.cpp
src/engine/: Engine.cpp  PostRunnables.hpp
src/frontend/: hud.cpp
src/frontend/screens/: LevelScreen.cpp  MenuScreen.cpp  MenuScreen.hpp
src/graphics/ui/: markdown.hpp
src/logic/: LevelController.cpp  LevelController.hpp  PlayerController.cpp  PlayerController.hpp
src/logic/scripting/: scripting.cpp  scripting.hpp
src/logic/scripting/lua/libs/: libhud.cpp  libplayer.cpp
src/objects/: Player.cpp  Player.hpp
src/util/: ThreadPool.hpp  command_line.cpp
temp_flowers/: pack.mcmeta
temp_flowers/assets/minecraft/models/block/: flowerbed_2.json  flowerbed_4.json  template_leaf_litter_1.json  template_leaf_litter_2.json  (+2 more)
test/: CMakeLists.txt
test/network/: curltest.cpp
vctest/: main.cpp
(+10 files in other folders)
